optimize kline candle processor, split bybit data grabber to separate module